Update VoteCommand.java
Rewrite