@@ -7,16 +7,13 @@ import pl.serweryminecraft24.sm24VoterJava.Sm24VoterJava;
 import pl.serweryminecraft24.sm24VoterJava.Utils;
 import pl.serweryminecraft24.sm24VoterJava.config.PluginConfig;
 import pl.serweryminecraft24.sm24VoterJava.service.VoteApiService;
-
-import java.util.Optional;
 import java.util.logging.Level;
 
 public final class VoteCommand implements CommandExecutor {
-
     private final Sm24VoterJava plugin;
     private final PluginConfig config;
     private final VoteApiService voteApiService;
-    private final String helpLink = "https://serweryminecraft24.pl/konfiguracja-pluginu";
+    private static final String HELP_LINK = "https://serweryminecraft24.pl/konfiguracja-pluginu";
 
     public VoteCommand(Sm24VoterJava plugin, PluginConfig config, VoteApiService voteApiService) {
         this.plugin = plugin;
@@ -26,56 +23,45 @@ public final class VoteCommand implements CommandExecutor {
 
     @Override
     public boolean onCommand(CommandSender sender, Command command, String label, String[] args) {
-
-        if (config.getApiToken().equalsIgnoreCase("tutaj_wpisz_token") || config.getApiToken().trim().isEmpty()) {
-
-            String line1 = config.getMsgInvalidTokenLine1().replace("{prefix}", config.getMsgPrefix());
-            String line2 = config.getMsgInvalidTokenLine2().replace("{prefix}", config.getMsgPrefix());
-            Utils.notifySenderWithClickableLink(sender, line1, null);
-            Utils.notifySenderWithClickableLink(sender, line2, helpLink);
+        String apiToken = config.getApiToken();
+        if (apiToken.isBlank() || apiToken.equalsIgnoreCase("tutaj_wpisz_token")) {
+            Utils.notifySenderWithClickableLink(sender, 
+                config.getMsgInvalidTokenLine1().replace("{prefix}", config.getMsgPrefix()), null);
+            Utils.notifySenderWithClickableLink(sender, 
+                config.getMsgInvalidTokenLine2().replace("{prefix}", config.getMsgPrefix()), HELP_LINK);
             return true;
         }
 
-        Optional<String> cachedLinkOpt = config.getCachedVoteLink();
-
-
-        if (cachedLinkOpt.isPresent()) {
-
-            String cachedLink = cachedLinkOpt.get();
-            String message = config.getMsgVoteLinkInfo().replace("{prefix}", config.getMsgPrefix());
-            Utils.notifySenderWithClickableLink(sender, message, cachedLink);
-        } else {
-
-            String fetchingMessage = config.getMsgVoteFetchingLink().replace("{prefix}", config.getMsgPrefix());
-            Utils.notifySenderWithClickableLink(sender, fetchingMessage, null);
-
-            voteApiService.fetchVoteLink()
-                    .thenAccept(apiResponse -> {
-                        plugin.getServer().getScheduler().runTask(plugin, () -> {
-                            if (apiResponse.isSuccess()) {
-                                String successMessage = config.getMsgVoteLinkSuccess().replace("{prefix}", config.getMsgPrefix());
-                                String fetchedLink = apiResponse.getMessage();
-
-                                plugin.cacheVoteLink(fetchedLink, config.getApiToken());
-
-                                Utils.notifySenderWithClickableLink(sender, successMessage, fetchedLink);
-                            } else {
-                                String errorMessage = config.getMsgRewardApiError()
-                                        .replace("{prefix}", config.getMsgPrefix())
-                                        .replace("{message}", apiResponse.getMessage());
-                                Utils.notifySenderWithClickableLink(sender, errorMessage, null);
-                            }
-                        });
+        config.getCachedVoteLink().ifPresentOrElse(
+            cachedLink -> Utils.notifySenderWithClickableLink(sender, 
+                config.getMsgVoteLinkInfo().replace("{prefix}", config.getMsgPrefix()), cachedLink),
+            () -> {
+                Utils.notifySenderWithClickableLink(sender, 
+                    config.getMsgVoteFetchingLink().replace("{prefix}", config.getMsgPrefix()), null);
+                
+                voteApiService.fetchVoteLink().thenAccept(apiResponse -> 
+                    plugin.getServer().getScheduler().runTask(plugin, () -> {
+                        if (apiResponse.success()) {
+                            String fetchedLink = apiResponse.message();
+                            plugin.cacheVoteLink(fetchedLink, apiToken);
+                            Utils.notifySenderWithClickableLink(sender, 
+                                config.getMsgVoteLinkSuccess().replace("{prefix}", config.getMsgPrefix()), fetchedLink);
+                        } else {
+                            Utils.notifySenderWithClickableLink(sender, 
+                                config.getMsgRewardApiError()
+                                    .replace("{prefix}", config.getMsgPrefix())
+                                    .replace("{message}", apiResponse.message()), null);
+                        }
                     })
-                    .exceptionally(error -> {
-                        plugin.getLogger().log(Level.SEVERE, "Błąd w komendzie /sm24-glosuj", error);
-                        plugin.getServer().getScheduler().runTask(plugin, () -> {
-                            String errorMessage = config.getMsgInternalError().replace("{prefix}", config.getMsgPrefix());
-                            Utils.notifySenderWithClickableLink(sender, errorMessage, null);
-                        });
-                        return null;
-                    });
-        }
+                ).exceptionally(error -> {
+                    plugin.getLogger().log(Level.SEVERE, "Błąd w komendzie /sm24-glosuj", error);
+                    plugin.getServer().getScheduler().runTask(plugin, () -> 
+                        Utils.notifySenderWithClickableLink(sender, 
+                            config.getMsgInternalError().replace("{prefix}", config.getMsgPrefix()), null));
+                    return null;
+                });
+            }
+        );
 
         return true;
     }
